--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "dexie": "^3.2.1",
     "dexie-react-hooks": "^1.1.1",
     "react": "^17.0.2",
